<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controler.CreerCompteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen20"
        android:layout_marginLeft="@dimen/dimen20"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/creer_compte_retour"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_arrow_back_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen40"
                android:text="@string/titre_creer_compte"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/dimen22" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/dimen80"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_baseline_person_add_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/activity_creer_compte_sexe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/activity_creer_compte_femme"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <RadioButton
                    android:id="@+id/activity_creer_compte_femme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texte_femme"/>
                <RadioButton
                    android:id="@+id/activity_creer_compte_homme"
                    android:layout_marginLeft="@dimen/dimen10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texte_homme"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/prenom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_creer_compte_prenomInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/nom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_creer_compte_nomInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/date_naissance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_creer_compte_date_naissanceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    android:focusable="false"
                    android:drawableRight="@drawable/ic_baseline_date_range_24"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/reference">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_creer_compte_referenceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_creer_compte_emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_creer_compte_motDePassInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/classe">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_creer_compte_classeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    android:focusable="false"
                    android:drawableRight="@drawable/ic_baseline_list_24"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/activity_creer_compte_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="@dimen/dimen20"
                android:background="@drawable/ligne_angle"
                android:gravity="center"
                android:text="@string/btn_creer_compte"
                android:textColor="#fff"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>