<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controler.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen280"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="@dimen/dimen100"
                    android:layout_marginTop="@dimen/dimen10"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_uasz"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen10"
                    android:text="@string/txt_bienvenue"
                    android:textSize="@dimen/dimen30"
                    android:textColor="@color/uasz"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen5"
                    android:textSize="@dimen/dimen16"
                    android:text="@string/txt_bienvenue_bis"
                    android:textColor="@color/uasz"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen40"
                    android:layout_marginBottom="@dimen/dimen20"
                    android:textSize="@dimen/dimen20"
                    android:text="@string/txt_connexion"
                    android:textColor="@color/uasz"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="@dimen/dimen40"
            android:layout_marginRight="@dimen/dimen40">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/uasz"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_main_emailInput"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/dimen20">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10"
                android:textColor="@color/uasz"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_main_motDePassInput"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/dimen20">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/activity_main_connectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_se_connecter"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen16"
                android:background="@drawable/ligne_angle"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen20"
                android:layout_marginLeft="@dimen/dimen40"
                android:layout_marginRight="@dimen/dimen40"/>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen10"
                android:padding="@dimen/dimen16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_creer_comptr"
                    android:textSize="@dimen/dimen16"/>
                <TextView
                    android:id="@+id/activity_main_inscriptionLien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dimen5"
                    android:linksClickable="true"
                    android:text="@string/txt_sinscrire"
                    android:textSize="@dimen/dimen16"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <View
                android:layout_width="@dimen/dimen280"
                android:layout_height="@dimen/dimen10"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen5"
                android:background="@drawable/ligne_angle"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>